# StatsCanInflation

./: .gitignore  .rsconnect-ignore  CLAUDE.md  README.md  TESTING_REPORT.md  environment.yml  main.py  pyproject.toml  requirements.txt
src/data/: cache.py  loader.py
src/models/: analysis.py  inflation.py
src/server/: app_server.py
src/ui/: app_ui.py
src/utils/: export.py  formatting.py
tests/: test_inflation_calculations.py
