[project]
name = "statscan-inflation"
version = "0.1.0"
description = "Statistics Canada Inflation Analysis Tool - Shiny App"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "cooneycw", email = "cooneycw@icloud.com"}
]

dependencies = [
    "shiny>=0.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.3.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
